Fixed HUNO-441: Remove white space in FAQ and policy page for both doctor and patient

--- a/src/doctor/styles/termsandcondition.scss
+++ b/src/doctor/styles/termsandcondition.scss
@@ -1,5 +1,14 @@
 .term_container {
+  background: #ffffff;
   box-shadow: 4px 4px 35px rgb(0 0 0 / 10%);
-  margin: 70px 10px;
+  border-radius: 12px;
   padding: 50px;
+  margin-top: 70px;
+  margin-bottom: 70px;
+  margin-right: 40px;
+  margin-left: 40px;
+  width: 100%;
+}
+.terms_heading {
+  margin-top: 2%;
 }
